welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:11: error: not found: type int
def dernierChiffre(a:int) : Int = {
                     ^